get all users work

--- a/gamify/src/main/resources/application.properties
+++ b/gamify/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost/gamify
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.jpa.show-sql=true
+ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # rest api
 server.servlet.context-path=/gamify
